--- a/mos.yml
+++ b/mos.yml
@@ -3,7 +3,7 @@ type: lib
 description: PWM support
 version: 1.0
 
-platforms: [ esp32, esp8266 ]
+platforms: [ esp32, esp32c3, esp8266 ]
 
 sources:
   - src
